<resources>
    <string name="app_name">Android_Project_M</string>
    <string name="API_KEY">c733ac6aba3d86364a56d1145bc1d1f9</string>
    <string name="API_TOKEN">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJjNzMzYWM2YWJhM2Q4NjM2NGE1NmQxMTQ1YmMxZDFmOSIsInN1YiI6IjVhMTI0MmMwOTI1MTQxMzhmMzA2MjYxOCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.jmYZhEeH0lORx8_fwFAUyxOgus1DPB29H5d5zPM30sE</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_nowPlaying">Now Playing</string>
    <string name="menu_upcoming">Upcoming</string>
    <string name="menu_topRate">Top Rate</string>
    <string name="menu_genres">Genres</string>
    <string name="menu_favorite">Favorite</string>
    <string name="search">Search...</string>
    <string name="btnFind">Find</string>
    <string name="msgAllGenres">All Genres</string>

</resources>
