<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="homeDataBinding"
            type="com.example.hcm_102_0006.android_project_m.view.ui.MainActivity"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:drawableRight="@android:drawable/ic_menu_edit"/>
        <HorizontalScrollView
            android:id="@+id/lgListCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_popular"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_topRate"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_genres"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_upcoming"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_nowPlaying"/>
            </TableRow>
        </HorizontalScrollView>

        <android.support.v7.widget.RecyclerView
            android:layout_below="@id/lgListCategories"
            android:id="@+id/rcyShowMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</layout>